@@ -1,3 +1,8 @@
+2009-04-28  Philippe Brochard  <pbrochard@common-lisp.net>
+
+	* src/clfswm-second-mode.lisp (sm-handle-motion-notify):
+	Optimisation when drawing second mode window.
+
 2009-04-27  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm-circulate-mode.lisp (circulate-mode): Optimisation in
